--- a/index.html
+++ b/index.html
@@ -6,6 +6,28 @@
     <title>Run-Buddy</title>
 </head>
 <body>
-  <h1>"Hello"</h1>  
+    <!-- Navigation -->
+     <header> Run Buddy</header>
+    <!-- hero/jurbortron -->
+     <section></section>
+     <!-- "What We Do" section -->
+      <section>
+        <h2> What We Do</h2>
+      </section>
+      <!-- "What You Do" section -->
+      <section>
+        <h2> What You Do</h2>
+      </section>
+      <!-- "Meet the trainer" section -->
+      <section>
+        <h2> What We Do</h2>
+      </section>
+<!-- "Reach Out" section -->
+<section>
+    <h2> Reach Out</h2>
+  </section>
+  <footer>
+    <h2>Made with ❤️by Run Buddy</h2>
+</footer>
 </body>
 </html>
