updated html by adding nav

--- a/index.html
+++ b/index.html
@@ -7,7 +7,25 @@
 </head>
 <body>
     <!-- Navigation -->
-     <header> Run Buddy</header>
+     <header> <h1>Run Buddy</h1>
+    <nav>
+      <ul>
+    <li>
+      <a href="What-We-Do">What We Do</a>
+    </li>
+    <li>
+      <a href="What-You-Do">What You Do</a>
+    </li>
+    <li>
+      <a href="Your Traineers">Your Traineers</a>
+    </li>
+    <li>
+      <a href="Reach Out">Reach Out</a>
+    </li>
+  </ul>
+    </nav>
+  
+   </header>
     <!-- hero/jurbortron -->
      <section></section>
      <!-- "What We Do" section -->
@@ -20,14 +38,14 @@
       </section>
       <!-- "Meet the trainer" section -->
       <section>
-        <h2> What We Do</h2>
+        <h2> Meet The Trainers</h2>
       </section>
 <!-- "Reach Out" section -->
 <section>
     <h2> Reach Out</h2>
   </section>
   <footer>
-    <h2>Made with ❤️by Run Buddy</h2>
+    <h2>Made with ❤️ by Run Buddy</h2>
 </footer>
 </body>
 </html>
