--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run-Buddy</title>
+    <link rel="stylesheet" href="./assets/style.css">
+    
 </head>
 <body>
     <!-- Navigation -->
-     <header> <h1>Run Buddy</h1>
+     <header> 
+      <h1>Run Buddy</h1>
     <nav>
       <ul>
     <li>
-      <a href="What-We-Do">What We Do</a>
+      <a  href="What-We-Do">What We Do</a>
     </li>
     <li>
-      <a href="What-You-Do">What You Do</a>
+      <a href="#What-You-Do">What You Do</a>
     </li>
     <li>
       <a href="Your Traineers">Your Traineers</a>
