--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run-Buddy</title>
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/assets/css/style.css">
     
 </head>
 <body>
@@ -30,7 +30,32 @@
   
    </header>
     <!-- hero/jurbortron -->
-     <section></section>
+     <section>
+      <div>
+        <h3>Get Started Today</h3>
+        <p>Fill Out this form and one of our trainers will schedule on a consult</p>
+      <!-- Add Sign Up "CTA" Form Element -->
+      <form>
+        <label for="name">Enter full name</label>
+        <input type="text" placeholder="Your Name" name="name" id="name">
+      <label for="email">Enter email address</label>
+    <input type="text" placeholder="Email Address" name="email" id="email">
+  <label for="tel">Enter your phone Number</label>
+<input type="text" placeholder="Telephone" name="tel" id="tel">
+<p>Have you worked out with a trainer before?
+  <input type="radio" name="trainer-conform" id="trainer-yes">
+<label for="trainer-yes">Yes</label>
+<input type="radio" name="trainer conform" id="trainer-no">
+<label for="trainer-no">No</label>
+</p>
+<p>
+  <label for="checkbox"> I acknowledge that I am at least 18 years of age</label>
+<input type="checkbox" name="age-conform" id="chrckbox">
+</p>
+<button type="submit">Get Running!</button>
+</form>
+    </div>
+     </section>
      <!-- "What We Do" section -->
       <section>
         <h2> What We Do</h2>
@@ -49,6 +74,10 @@
   </section>
   <footer>
     <h2>Made with ❤️ by Run Buddy</h2>
+    <div>
+      <a href="#">Read Our Privacy Policy</a><br>
+      &copy; 2024 Run-Buddy, Inc.
+    </div>
 </footer>
 </body>
 </html>
